--- a/public/watch.html
+++ b/public/watch.html
@@ -10,21 +10,54 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles.css?v=22" />
   <link rel="icon" href="/logo.svg" type="image/svg+xml" />
-  <style>
-    .wrap{max-width:1100px;margin:0 auto;padding:16px}
-    .headerbar{display:flex;align-items:center;justify-content:space-between;margin-bottom:10px}
-    .badge{display:inline-block;border:1px solid #2a2f37;border-radius:999px;padding:4px 10px;font-size:12px}
-    .teams{display:grid;grid-template-columns:1fr auto 1fr;gap:12px;align-items:center;margin:8px 0 4px}
-    .side{display:flex;align-items:center;gap:10px;justify-content:flex-start}
-    .side.right{justify-content:flex-end;flex-direction:row-reverse}
-    .side img{width:56px;height:56px;object-fit:contain}
-    .h1{font-size:28px;font-weight:800;text-align:center}
-    .muted{opacity:.7}
-    .meta{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:12px;margin:14px 0}
-    .player{width:100%;aspect-ratio:16/9;background:#000;border-radius:12px;overflow:hidden;margin:18px 0;display:flex;align-items:center;justify-content:center}
-    .btn{display:inline-flex;align-items:center;gap:8px;border:1px solid #2a2f37;border-radius:10px;padding:10px 14px;text-decoration:none;color:#cbd5e1}
-    .btn:hover{background:#121821}
-  </style>
+  
+<style>
+  :root{ --pad: clamp(12px, 3vw, 22px); }
+  .wrap{max-width:980px;margin:0 auto;padding:var(--pad)}
+  .headerbar{display:grid;grid-template-columns:auto 1fr auto;align-items:center;margin-bottom:10px}
+  .headerbar .center{justify-self:center;}
+  .badge{display:inline-block;border:1px solid #2a2f37;border-radius:999px;padding:4px 10px;font-size:12px;max-width:50vw;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+  /* Teams row with grid areas for perfect centering */
+  .teams{display:grid;grid-template-columns:1fr auto 1fr;grid-template-areas:'home vs away';gap:14px;align-items:center;justify-items:center;margin:12px 0 6px}
+  .home{grid-area:home}
+  .away{grid-area:away}
+  .versus{grid-area:vs}
+  .side{display:flex;align-items:center;gap:10px;justify-content:center;text-align:center}
+  .side.right{flex-direction:row-reverse}
+  .side img{width:clamp(44px,8vw,72px);height:clamp(44px,8vw,72px);object-fit:contain}
+  .teamName{font-size:clamp(16px,4vw,20px);font-weight:600}
+  .h1{font-size:clamp(22px,6vw,32px);font-weight:800;text-align:center}
+  .muted{opacity:.75}
+  /* Meta grid collapses gracefully */
+  .meta{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:12px;margin:14px 0}
+  @media(max-width:720px){ .meta{grid-template-columns:repeat(2,minmax(0,1fr));} }
+  /* Player */
+  .player{width:100%;aspect-ratio:16/9;background:#000;border-radius:14px;overflow:hidden;margin:14px 0;display:flex;align-items:center;justify-content:center}
+  .btn{display:inline-flex;align-items:center;gap:8px;border:1px solid #2a2f37;border-radius:12px;padding:10px 14px;text-decoration:none;color:#cbd5e1}
+  .btn:hover{background:#121821}
+  /* Skeletons */
+  .sk{position:relative;background:#0e131a;border-radius:8px;overflow:hidden}
+  .sk::after{content:'';position:absolute;inset:0;transform:translateX(-100%);background:linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,.06), rgba(255,255,255,0));animation:sh 1.1s infinite}
+  @keyframes sh{to{transform:translateX(100%)}}
+  .nameSk{height:20px;width:60%;margin:6px auto;border-radius:6px}
+  /* Mobile: stack teams vertically; hide long badge */
+  @media(max-width:600px){
+    .teams{grid-template-columns:1fr;grid-template-areas:'home' 'vs' 'away';gap:8px}
+    #leagueBadge{display:none}
+  }
+
+  /* Loading overlay */
+  .loading{position:fixed;inset:0;display:flex;flex-direction:column;align-items:center;justify-content:center;background:rgba(3,8,14,.75);backdrop-filter:saturate(120%) blur(2px);z-index:50;transition:opacity .25s ease}
+  .loading.hidden{opacity:0;pointer-events:none}
+  .spinner{position:relative;width:72px;height:72px;margin-bottom:12px}
+  .ring{position:absolute;inset:0;border-radius:50%;border:4px solid rgba(255,255,255,.12);border-top-color:rgba(255,255,255,.6);animation:spin 1s linear infinite}
+  .dot{position:absolute;top:50%;left:50%;width:14px;height:14px;background:#22c55e;border-radius:50%;transform:translate(-50%,-50%);animation:pulse 1.2s ease-in-out infinite}
+  .loadingText{font-size:14px;opacity:.85}
+  @keyframes spin{to{transform:rotate(360deg)}}
+  @keyframes pulse{0%,100%{transform:translate(-50%,-50%) scale(.85);opacity:.8}50%{transform:translate(-50%,-50%) scale(1.1);opacity:1}}
+</style>
+
+
 </head>
 <body>
 <header class="header">
@@ -35,14 +68,22 @@
 </header>
 
 <main class="wrap">
+  <div id="loadingOverlay" class="loading hidden" aria-live="polite" aria-busy="true">
+    <div class="spinner">
+      <div class="ring"></div>
+      <div class="dot"></div>
+    </div>
+    <div class="loadingText">Loading match data…</div>
+  </div>
+
   <div class="headerbar">
-    <a class="btn" href="/" aria-label="Back to schedule">← Back</a>
+    <a class="btn" href="/" aria-label="Back to schedule">← Back</a><div class="center"></div>
     <span id="leagueBadge" class="badge"></span>
   </div>
 
   <div class="teams">
     <div class="side left"><img id="homeLogo" alt="" /><span id="homeName"></span></div>
-    <div class="h1" id="versus">vs</div>
+    <div class="h1 versus" id="versus">VS</div>
     <div class="side right"><img id="awayLogo" alt="" /><span id="awayName"></span></div>
   </div>
   <div class="muted" id="statusLine" style="text-align:center"></div>
@@ -66,7 +107,7 @@
   function qs(name){ return new URLSearchParams(location.search).get(name) || ''; }
   function set(el, val){ el.textContent = val || ''; }
 
-  async function load(){
+  async function load(){ document.getElementById('loadingOverlay').classList.remove('hidden');
     const id = qs('id');
     const maybeSrc = qs('src'); // if someone manually adds it, we only show a button, no embedding.
 
@@ -188,7 +229,7 @@
     return cands[0];
   }
 
-  async function load(){
+  async function load(){ document.getElementById('loadingOverlay').classList.remove('hidden');
     const id = qs('id');
     const maybeSrc = qs('src');
     if (maybeSrc){
