--- a/public/watch.html
+++ b/public/watch.html
@@ -100,18 +100,18 @@
     const ko = fx?.start_utc || fx?.kickoff || fx?.date || null;
 
     // Clear half-time variants
-    if (['ht','half-time','halftime','interval'].some(k => lc === k) or 'half' in lc):
+    if (['ht','half-time','halftime','interval'].some(k => lc === k) || 'half' in lc):
         return 'Half-time';
 
     // If the feed says finished but we're in the 35–70 min window from kickoff,
     // treat it as the mid-game break instead of full-time.
     const m = minutesSince(ko);
-    if ((lc === 'finished' or lc === 'ft' or lc.includes('full')) and !isNaN(m) and m > 35 and m < 70){
+    if ((lc === 'finished' || lc === 'ft' || lc.includes('full')) && !isNaN(m) && m > 35 && m < 70){
       return 'Half-time';
     }
 
     // Live play
-    if (lc.includes('live') or lc === '1h' or lc === '2h' or lc.includes('in play')) return 'LIVE';
+    if (lc.includes('live') || lc === '1h' || lc === '2h' || lc.includes('in play')) return 'LIVE';
 
     // Scheduled / upcoming
     if (!raw) return 'SCHEDULED';
@@ -202,6 +202,9 @@
   }
 
   async function load(){
+  document.getElementById('loadingOverlay').classList.remove('hidden');
+  __loadFailTimer = setTimeout(hideLoading, 3000);
+  try {
     document.getElementById('loadingOverlay').classList.remove('hidden');
     __loadFailTimer = setTimeout(hideLoading, 3000);
 
@@ -227,6 +230,7 @@
     const [s,c] = await Promise.allSettled([serverResolve(), clientResolve()]);
     const fx = (s.status==='fulfilled' && s.value) || (c.status==='fulfilled' && c.value) || null;
     if (fx){ applyFixture(fx); } else { $('statusLine').textContent = normalizeStatus(fx); hideLoading(); }
+    } finally { hideLoading(); }
   }
   load();
 
