--- a/public/public/watch.html
+++ b/public/public/watch.html
@@ -161,7 +161,7 @@
     }
   })();
 
-  async function fixturesFor(dateStr){
+  async async function fixturesFor(dateStr){
     const r = await fetch('/api/fixtures?date=' + encodeURIComponent(dateStr), {cache:'no-store'}).catch(()=>null);
     const j = r ? await r.json().catch(()=>null) : null;
     return Array.isArray(j?.fixtures) ? j.fixtures : [];
@@ -225,10 +225,17 @@
     __loadFailTimer = setTimeout(hideLoading, 3000);
 
     const id  = qs('id');
-    if (!id){ $('statusLine').textContent = normalizeStatus(fx); hideLoading(); return; }
+    if (!id){ $('statusLine').textContent = 'SCHEDULED'; hideLoading(); return; }
 
     // Try server lookup quickly; if slow, do client-side scan
-    async function serverResolve(){ try{ const r = await fetch('/api/fixture/' + encodeURIComponent(id)); if (r.ok){ const j = await r.json(); return j.fixture || null; } }catch{} return null; }
+    async function serverResolve(){
+      try{
+        const r = await fetch('/api/fixture/' + encodeURIComponent(id), {cache:'no-store'});
+        if (!r.ok) return null;
+        const j = await r.json().catch(()=>null);
+        return j && j.fixture ? j.fixture : null;
+      }catch(e){ return null; }
+    } }catch{} return null; }
     async function clientResolve(){
       const hasAt = id.includes('@');
       const slugPart = slug(hasAt ? id.split('@')[0] : id);
@@ -258,7 +265,7 @@
   }
 
 <script>
-  async function refreshStatus(){
+  async async function refreshStatus(){
     try{
       const id = new URLSearchParams(location.search).get('id') || '';
       if (!id) return;
